--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </head>
     <body>
         <!--  Menu Superior -->
-          <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
+        <ul>
+            <li><a class="active" href="https://lojamodafeminina.github.io/ModaFeminina/">Início</a></li>
+            <li><a href="https://lojamodafeminina.github.io/catalogo/">Catalogo</a></li>
+            <li><a href="https://lojamodafeminina.github.io/produtos/">Produtos</a></li>
+            <li><a href="https://lojamodafeminina.github.io/contato/">Contato</a></li>
           </ul>
         <script src="" async defer></script>
     </body>
